Added first version of keyboard and keyboard user control.

--- a/App.xaml
+++ b/App.xaml
@@ -25,21 +25,18 @@
         <DataTemplate DataType="{x:Type viewmodel:PaymentViewModel}">
             <view:PaymentView />
         </DataTemplate>
-
-        <Style TargetType="{x:Type Button}" x:Key="HomeButton">
-            <Setter Property="Cursor" Value="Hand" />
-            <Setter Property="Width" Value="60" />
-            <Setter Property="Height" Value="45" />
-            <Setter Property="Padding" Value="0 5 0 3" />
-            <Setter Property="Background" Value="#65686A" />
-            <Setter Property="BorderBrush" Value="#3F3E3E" />
-            <Setter Property="BorderThickness" Value="0 0 1 0" />
+        
+        <Style TargetType="Button" x:Key="TabButton">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="MaxWidth" Value="200"/>
+            <Setter Property="MaxHeight" Value="80"/>
             <Setter Property="Template">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Cursor="{TemplateBinding Cursor}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" />
+                    <ControlTemplate TargetType="Button">
+                        <Border CornerRadius="3" Background="#FAAB1A" BorderBrush="#77FAAB1A" BorderThickness="5,5,5,5" >
+                            <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" 
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
@@ -51,31 +48,25 @@
             </Style.Triggers>
         </Style>
 
-        <Style TargetType="{x:Type Button}" />
-
-        <Style TargetType="Button" x:Key="NavigationButton">
-            <Setter Property="Width" Value="90" />
-            <Setter Property="Height" Value="45" />
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="BorderBrush" Value="#3F3E3E" />
-            <Setter Property="BorderThickness" Value="0 0 1 0" />
-            <Setter Property="Padding" Value="0 5 0 3" />
-            <Setter Property="Cursor" Value="Hand" />
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Border Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Cursor="{TemplateBinding Cursor}">
-                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" />
-                        </Border>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#222" />
-                </Trigger>
-            </Style.Triggers>
-        </Style>
+        <!-- <Style TargetType="{x:Type Button}" x:Key="NavigationButton"> -->
+        <!--     <Setter Property="Cursor" Value="Hand" /> -->
+        <!--     <Setter Property="FontSize" Value="16" /> -->
+        <!--     <Setter Property="MaxWidth" Value="200" /> -->
+        <!--     <Setter Property="MaxHeight" Value="120" /> -->
+        <!--     <Setter Property="Background" Value="#65686A" /> -->
+        <!--     <Setter Property="BorderBrush" Value="#3F3E3E" /> -->
+        <!--     <Setter Property="BorderThickness" Value="0 0 1 0" /> -->
+        <!--     <Setter Property="Template"> -->
+        <!--         <Setter.Value> -->
+        <!--             <ControlTemplate TargetType="{x:Type Button}"> -->
+        <!--                 <Border Width="{TemplateBinding Width}" Height="{TemplateBinding Height}" Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}" -->
+        <!--                         BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Cursor="{TemplateBinding Cursor}"> -->
+        <!--                     <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" /> -->
+        <!--                 </Border> -->
+        <!--             </ControlTemplate> -->
+        <!--         </Setter.Value> -->
+        <!--     </Setter> -->
+        <!-- -->
+        <!-- </Style> -->
     </Application.Resources>
 </Application>
