--- a/View/WindowView.xaml
+++ b/View/WindowView.xaml
@@ -4,14 +4,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:model="clr-namespace:FilterBuilder.Model"
+        xmlns:model="clr-namespace:FilterBuilder.Service"
+        xmlns:filterBuilder="clr-namespace:FilterBuilder"
         DataContext="{Binding Window, Source={StaticResource Locator}}"
         Title="{Binding Title}" Width="800" Height="600" Left="0" Top="0">
     <DockPanel LastChildFill="True">
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="60" Margin="0,10,10,0">
-            <Label Content="{Binding Path=ChangeLanguageCommand,Converter={StaticResource TranslationConverter}, ConverterParameter='LANGUAGE', UpdateSourceTrigger=PropertyChanged}"
+            <Label Content="{Binding Path=ChangeLanguageCommand, Converter={StaticResource TranslationConverter}, ConverterParameter='LANGUAGE', UpdateSourceTrigger=PropertyChanged}"
                    Width="110" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <ItemsControl ItemsSource="{Binding AvailableLanguages, Source={x:Static model:State.Instance}}">
+            <ItemsControl ItemsSource="{Binding AvailableLanguages, Source={x:Static filterBuilder:State.Instance}}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel Orientation="Horizontal" />
@@ -20,7 +21,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Margin="5,0,0,0" Cursor="Hand"
-                                Command="{Binding DataContext.ChangeLanguageCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" CommandParameter="{Binding Id}">
+                                Command="{Binding Window.ChangeLanguageCommand, Source={StaticResource Locator}}" CommandParameter="{Binding Id}">
                             <Image Source="{Binding Icon}" RenderOptions.BitmapScalingMode="HighQuality" Margin="5" />
                         </Button>
                     </DataTemplate>
