--- a/Helper/KeyboardControl.xaml
+++ b/Helper/KeyboardControl.xaml
@@ -4,8 +4,5 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d">
-    <Grid x:Name="KeyboardControlGrid">
-        
-    </Grid>
+    <Grid x:Name="KeyboardControlGrid" />
 </UserControl>
-
