--- a/App.xaml
+++ b/App.xaml
@@ -25,18 +25,18 @@
         <DataTemplate DataType="{x:Type viewmodel:PaymentViewModel}">
             <view:PaymentView />
         </DataTemplate>
-        
+
         <Style TargetType="Button" x:Key="TabButton">
-            <Setter Property="FontSize" Value="16"/>
-            <Setter Property="FontWeight" Value="SemiBold"/>
-            <Setter Property="MaxWidth" Value="200"/>
-            <Setter Property="MaxHeight" Value="80"/>
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="FontWeight" Value="SemiBold" />
+            <Setter Property="MaxWidth" Value="200" />
+            <Setter Property="MaxHeight" Value="80" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="Button">
-                        <Border CornerRadius="3" Background="#FAAB1A" BorderBrush="#77FAAB1A" BorderThickness="5,5,5,5" >
-                            <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" 
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        <Border CornerRadius="3" Background="#FAAB1A" BorderBrush="#77FAAB1A" BorderThickness="5,5,5,5">
+                            <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}"
+                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
@@ -46,6 +46,41 @@
                     <Setter Property="Background" Value="#222" />
                 </Trigger>
             </Style.Triggers>
+        </Style>
+
+        <Style TargetType="{x:Type Button}" x:Key="KeyboardButtonStyle">
+            <Setter Property="Background" Value="#ffab1a" />
+            <Setter Property="BorderBrush" Value="#00000000" />
+            <Setter Property="BorderThickness" Value="0,0,0,0" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="FontWeight" Value="Medium" />
+            <Setter Property="FontFamily" Value="Century Gothic" />
+            <Setter Property="Cursor" Value="Hand" />
+            
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">
+                    <Setter Property="Background" Value="#e69200" />
+                </Trigger>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="Background" Value="#cd8100" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style TargetType="{x:Type Border}" x:Key="KeyboardButtonBorderStyle">
+            <Setter Property="Margin" Value="10,10,0,0" />
+            <Setter Property="BorderBrush" Value="#77ffab1a" />
+            <Setter Property="BorderThickness" Value="5,5,5,5" />
+            <Setter Property="CornerRadius" Value="3,3,3,3" />
         </Style>
 
         <!-- <Style TargetType="{x:Type Button}" x:Key="NavigationButton"> -->
