Refactoring project name.

--- a/App.xaml
+++ b/App.xaml
@@ -1,13 +1,13 @@
-﻿<Application x:Class="FilterBuilder.App"
+﻿<Application x:Class="ParkingApp.App"
              mc:Ignorable="d"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:view="clr-namespace:FilterBuilder.View"
-             xmlns:viewmodel="clr-namespace:FilterBuilder.ViewModel"
-             xmlns:service="clr-namespace:FilterBuilder.Service"
-             xmlns:converters="clr-namespace:FilterBuilder.Converters"
+             xmlns:view="clr-namespace:ParkingApp.View"
+             xmlns:viewmodel="clr-namespace:ParkingApp.ViewModel"
+             xmlns:service="clr-namespace:ParkingApp.Service"
+             xmlns:converters="clr-namespace:ParkingApp.Converters"
              StartupUri="View/WindowView.xaml">
     <Application.Resources>
         <service:LocatorService x:Key="Locator" d:IsDataSource="True" />
