--- a/Helper/KeyboardControl.xaml
+++ b/Helper/KeyboardControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="FilterBuilder.Helper.KeyboardControl"
+<UserControl x:Class="ParkingApp.Helper.KeyboardControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
