--- a/View/HomeView.xaml
+++ b/View/HomeView.xaml
@@ -1,10 +1,10 @@
-<UserControl x:Class="FilterBuilder.View.HomeView"
+<UserControl x:Class="ParkingApp.View.HomeView"
              mc:Ignorable="d"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:helper="clr-namespace:FilterBuilder.Helper"
+             xmlns:helper="clr-namespace:ParkingApp.Helper"
              DataContext="{Binding Home, Source={StaticResource Locator}}">
     <Grid>
         <Grid.ColumnDefinitions>
