--- a/View/WindowView.xaml
+++ b/View/WindowView.xaml
@@ -1,18 +1,18 @@
-<Window x:Class="FilterBuilder.View.WindowView"
+<Window x:Class="ParkingApp.View.WindowView"
         mc:Ignorable="d"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:model="clr-namespace:FilterBuilder.Service"
-        xmlns:filterBuilder="clr-namespace:FilterBuilder"
+        xmlns:model="clr-namespace:ParkingApp.Service"
+        xmlns:ParkingApp="clr-namespace:ParkingApp"
         DataContext="{Binding Window, Source={StaticResource Locator}}"
         Title="{Binding Title}" Width="800" Height="600" Left="0" Top="0">
     <DockPanel LastChildFill="True">
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="60" Margin="0,10,10,0">
             <Label Content="{Binding Path=ChangeLanguageCommand, Converter={StaticResource TranslationConverter}, ConverterParameter='LANGUAGE', UpdateSourceTrigger=PropertyChanged}"
                    Width="110" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <ItemsControl ItemsSource="{Binding AvailableLanguages, Source={x:Static filterBuilder:State.Instance}}">
+            <ItemsControl ItemsSource="{Binding AvailableLanguages, Source={x:Static ParkingApp:State.Instance}}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel Orientation="Horizontal" />
