--- a/View/RegisterView.xaml
+++ b/View/RegisterView.xaml
@@ -5,10 +5,35 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:enum="clr-namespace:ParkingApp.Enum"
-             DataContext="{Binding Register, Source={StaticResource Locator}}">
+             xmlns:parkingApp="clr-namespace:ParkingApp"
+             DataContext="{Binding Locator.Payment, Source={x:Static parkingApp:State.Instance}}">
     <StackPanel>
-        <Button Content="Back" Command="{Binding Window.ChangeViewCommand, Source={StaticResource Locator}}" CommandParameter="{x:Static enum:View.HOME}" />
-        <Label>This is the page where the parking should be started.</Label>
-        <Button Content="Confirm Registration" Command="{Binding Window.ChangeViewCommand, Source={StaticResource Locator}}" CommandParameter="{x:Static enum:View.HOME}" />
+        <TextBlock>PAGE</TextBlock>
+        <Grid Visibility="{Binding CurrentParking, Converter={StaticResource ValueToVisibilityConverter}, ConverterParameter='true', Source={x:Static parkingApp:State.Instance}}">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0">Something here</TextBlock>
+            <TextBlock Grid.Row="1" Text="{Binding CurrentParking.Id, Source={x:Static parkingApp:State.Instance}}" />
+            <TextBlock Grid.Row="2" Text="{Binding CurrentParking.TimeRegistered, Source={x:Static parkingApp:State.Instance}}" />
+            <TextBlock Grid.Row="3" Text="{Binding CurrentParking.TimeCompleted, Source={x:Static parkingApp:State.Instance}}" />
+            <Button Grid.Row="4" Content="Complete" Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.HOME}" />
+        </Grid>
+
+        <Grid Visibility="{Binding CurrentParking, Converter={StaticResource ValueToVisibilityConverter}, ConverterParameter='false', Source={x:Static parkingApp:State.Instance}}">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Row="0">Nothing here</TextBlock>
+            <Button Grid.Row="1" Content="Back" Command="{Binding Locator.Window.ChangeViewCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{x:Static enum:View.HOME}" />
+        </Grid>
+
     </StackPanel>
 </UserControl>
