--- a/View/WindowView.xaml
+++ b/View/WindowView.xaml
@@ -4,15 +4,14 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:model="clr-namespace:ParkingApp.Service"
-        xmlns:ParkingApp="clr-namespace:ParkingApp"
-        DataContext="{Binding Window, Source={StaticResource Locator}}"
+        xmlns:parkingApp="clr-namespace:ParkingApp"
+        DataContext="{Binding Locator.Window, Source={x:Static parkingApp:State.Instance}}"
         Title="{Binding Title}" Width="800" Height="600" Left="0" Top="0">
     <DockPanel LastChildFill="True">
         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="60" Margin="0,10,10,0">
             <Label Content="{Binding Path=ChangeLanguageCommand, Converter={StaticResource TranslationConverter}, ConverterParameter='LANGUAGE', UpdateSourceTrigger=PropertyChanged}"
                    Width="110" FontSize="20" VerticalContentAlignment="Center" HorizontalContentAlignment="Right"/>
-            <ItemsControl ItemsSource="{Binding AvailableLanguages, Source={x:Static ParkingApp:State.Instance}}">
+            <ItemsControl ItemsSource="{Binding Locator.Window.AvailableLanguages, Source={x:Static parkingApp:State.Instance}}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <StackPanel Orientation="Horizontal" />
@@ -21,7 +20,7 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Button BorderBrush="Transparent" BorderThickness="0" Background="Transparent" Margin="5,0,0,0" Cursor="Hand"
-                                Command="{Binding Window.ChangeLanguageCommand, Source={StaticResource Locator}}" CommandParameter="{Binding Id}">
+                                Command="{Binding Locator.Window.ChangeLanguageCommand, Source={x:Static parkingApp:State.Instance}}" CommandParameter="{Binding Id}">
                             <Image Source="{Binding Icon}" RenderOptions.BitmapScalingMode="HighQuality" Margin="5" />
                         </Button>
                     </DataTemplate>
